# fracture

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
assets/data/: items.ron  recipes.ron
crates/engine_ai/: Cargo.toml
crates/engine_ai/src/: lib.rs
crates/engine_ai/src/behavior/: blackboard.rs  mod.rs  tree.rs
crates/engine_ai/src/behavior/nodes/: mod.rs  selector.rs  sequence.rs
crates/engine_ai/src/creatures/: hostile.rs  mod.rs  passive.rs
crates/engine_ai/src/pathfinding/: astar.rs  cache.rs  mod.rs  navmesh.rs
crates/engine_ai/src/steering/: avoidance.rs  combined.rs  flee.rs  mod.rs  seek.rs  wander.rs
crates/engine_audio/: Cargo.toml
crates/engine_audio/src/: ambient.rs  combat_music.rs  effects.rs  lib.rs  manager.rs  music.rs  sound.rs  sound_pool.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: lib.rs  logging.rs  profiling.rs
crates/engine_core/src/coords/: chunk_pos.rs  conversions.rs  local_pos.rs  mod.rs  world_pos.rs
crates/engine_core/src/math/: aabb.rs  frustum.rs  intersect.rs  mod.rs  obb.rs  plane.rs  ray.rs  sphere.rs
crates/engine_core/src/memory/: arena.rs  mod.rs  pool.rs  tracking.rs
crates/engine_core/src/platform/: action_map.rs  input.rs  mod.rs  timing.rs  window.rs
crates/engine_network/: Cargo.toml
crates/engine_network/src/: lib.rs
crates/engine_network/src/prediction/: mod.rs  movement.rs
crates/engine_network/src/protocol/: client_message.rs  mod.rs  server_message.rs
crates/engine_network/src/sync/: chunk_sync.rs  interpolation.rs  mod.rs  relevancy.rs
crates/engine_network/src/transport/: client.rs  mod.rs  server.rs
crates/engine_network/src/validation/: mod.rs  movement_validator.rs  rate_limiter.rs  resource_verifier.rs
crates/engine_physics/: Cargo.toml
crates/engine_physics/src/: lib.rs
crates/engine_physics/src/collision/: capsule_aabb.rs  mod.rs  sphere_aabb.rs
crates/engine_physics/src/dimension/: fractures.rs  mod.rs  state.rs
crates/engine_physics/src/raycast/: dda.rs  mod.rs
crates/engine_physics/src/simulation/: fall_damage.rs  mod.rs  player_movement.rs
crates/engine_render/: Cargo.toml
crates/engine_render/src/: lib.rs  renderer.rs
crates/engine_render/src/backend/: device.rs  mod.rs
crates/engine_render/src/camera/: camera.rs  controller.rs  mod.rs
crates/engine_render/src/dimension/: ghost_blocks.rs  mod.rs  transitions.rs  visual_effects.rs
crates/engine_render/src/fog/: mod.rs
crates/engine_render/src/ghost_block/: mod.rs
crates/engine_render/src/lighting/: block_light.rs  directional.rs  light_uniform.rs  light_update.rs  mod.rs  point_light.rs
crates/engine_render/src/shaders/: ghost_block.wgsl  sky.wgsl  triangle.wgsl  voxel.wgsl
crates/engine_render/src/sky/: mod.rs  sky_renderer.rs  sky_renderer_test.rs
crates/engine_render/src/voxel/: ambient_occlusion.rs  chunk_mesh.rs  dirty_tracker.rs  greedy_mesh.rs  mesh_builder.rs  mod.rs  texture_atlas.rs  voxel_pipeline.rs  voxel_renderer.rs
crates/engine_ui/: Cargo.toml
crates/engine_ui/src/: lib.rs
crates/engine_ui/src/hud/: anchor_status.rs  crosshair.rs  debug_console.rs  debug_overlay.rs  dimension_indicator.rs  fracture_warning.rs  health_bar.rs  hotbar.rs  hunger_bar.rs  mod.rs  sickness_gauge.rs  stability_meter.rs  status_effects.rs  tooltip.rs
crates/engine_ui/src/screens/: chat.rs  crafting.rs  inventory_screen.rs  main_menu.rs  mod.rs  pause_menu.rs  settings.rs
crates/engine_world/: Cargo.toml
crates/engine_world/src/: lib.rs
crates/engine_world/src/chunk/: block.rs  chunk.rs  chunk_state.rs  mod.rs
crates/engine_world/src/entity/: mod.rs  status.rs
crates/engine_world/src/generation/: biome.rs  caves.rs  mod.rs  noise.rs  structures.rs  terrain.rs
crates/engine_world/src/manager/: chunk_manager.rs  loading_queue.rs  mod.rs  neighbor_tracker.rs  spawn.rs
crates/engine_world/src/persistence/: mod.rs  region.rs  world_meta.rs
crates/game/: Cargo.toml
crates/game/src/: integration_tests.rs  lib.rs  main.rs
crates/game/src/ai/: herd.rs  lod.rs  mod.rs  ranged.rs
crates/game/src/audio/: dimension_ambient.rs  fracture_audio.rs  mod.rs
crates/game/src/building/: mod.rs  placement.rs
crates/game/src/crafting/: anchor_workshop.rs  executor.rs  furnace.rs  mod.rs  reality_forge.rs  registry.rs  stability_infuser.rs  transmutation_table.rs
crates/game/src/creatures/: hostile.rs  mod.rs  passive.rs
crates/game/src/dimension/: anchors.rs  mod.rs  phase_shift.rs  weak_points.rs
crates/game/src/ecs/: components.rs  entity_save.rs  mod.rs
crates/game/src/entities/: creature.rs  mod.rs  player.rs  spawning.rs
crates/game/src/equipment/: mod.rs  phase_suits.rs  stability_equip.rs
crates/game/src/inventory/: container.rs  durability.rs  equipment.rs  mod.rs  registry.rs  tools.rs
crates/game/src/networking/: commands.rs  cross_dimension.rs  dimension_sync.rs  mod.rs
crates/game/src/stability/: batteries.rs  energy.rs  generators.rs  mod.rs
crates/game/src/survival/: combat.rs  death.rs  health.rs  hunger.rs  mining.rs  mod.rs  sickness.rs  transmutation.rs
crates/game/src/world/: inverted_gen.rs  mod.rs  nexus_gen.rs  prime_gen.rs  void_gen.rs  weak_point_gen.rs
crates/game/tests/: integration.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  server.rs
tests/: multiplayer_sync_test.rs  save_load_test.rs  world_generation_test.rs
