[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Katie"]

[workspace.dependencies]
# Math
glam = { version = "0.29", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Graphics
wgpu = "24"
winit = { version = "0.30", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# ECS
hecs = "0.10"

# Networking
renet = "0.0.16"

# Audio
kira = "0.9"

# Random
rand = "0.8"

# UI
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"

# Terrain
noise = "0.9"

# Async
tokio = { version = "1", features = ["full"] }
pollster = "0.4"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"

# Testing
approx = "0.5"

# Memory
bumpalo = "3"

# Config
ron = "0.8"

# Profiling
puffin = "0.19"

# Compression
lz4_flex = "0.11"
crc32fast = "1.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
