[package]
name = "engine_ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI system for the Lattice game engine"

[dependencies]
engine_core = { path = "../engine_core" }
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
