[package]
name = "engine_audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Audio system for the Lattice game engine"

[dependencies]
engine_core = { path = "../engine_core" }
kira.workspace = true
glam.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true

[lints]
workspace = true
