[package]
name = "engine_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core utilities for the Lattice game engine"

[dependencies]
glam.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
bumpalo.workspace = true
winit.workspace = true
ron.workspace = true
puffin.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile = "3"

[lints]
workspace = true
