[package]
name = "engine_render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rendering system for the Lattice game engine"

[dependencies]
engine_core = { path = "../engine_core" }
engine_world = { path = "../engine_world" }
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
glam.workspace = true
thiserror.workspace = true
tracing.workspace = true
pollster.workspace = true
image.workspace = true

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
