[package]
name = "engine_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UI system for the Lattice game engine"

[dependencies]
engine_core = { path = "../engine_core" }
engine_physics = { path = "../engine_physics" }
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
