[package]
name = "engine_world"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Voxel world system for the Lattice game engine"

[dependencies]
engine_core = { path = "../engine_core" }
glam.workspace = true
noise.workspace = true
serde.workspace = true
bincode.workspace = true
ron.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
lz4_flex.workspace = true
crc32fast.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile = "3"

[lints]
workspace = true
